deploy/yamls/net5app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    move2kube.konveyor.io/service.expose: "true"
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: net5app
  name: net5app
spec:
  ports:
    - name: port-5000
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    move2kube.konveyor.io/service: net5app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
