deploy/yamls/myproject-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: myproject
  name: myproject
spec:
  rules:
    - host: myproject.com
      http:
        paths:
          - backend:
              service:
                name: net5app
                port:
                  name: port-5000
            path: /net5app
            pathType: Prefix
status:
  loadBalancer: {}
